# hypesilico

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  PR-001-IMPLEMENTATION.md  PR-002-IMPLEMENTATION.md  README.md  claude.md  docker-compose.yml
data/: ledger.db-shm  ledger.db-wal
scripts/: validate.py  validate.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: deposits.rs  health.rs  leaderboard.rs  mod.rs  pnl.rs  positions.rs  risk.rs  trades.rs
src/compile/: incremental.rs  mod.rs
src/datasource/: builder_logs.rs  hyperliquid.rs  mock.rs  mod.rs
src/db/: migrations.rs  mod.rs  repo.rs  schema.sql
src/db/repo/: fills.rs  mod.rs  positions.rs
src/domain/: attribution.rs  builder_logs.rs  decimal.rs  deposit.rs  fill.rs  mod.rs  ordering.rs  primitives.rs
src/engine/: builder_logs_matcher.rs  equity.rs  mod.rs  position_tracker.rs  taint.rs
src/orchestration/: attribution.rs  ensure.rs  mod.rs  orchestrator.rs
tests/: builder_logs_api_test.rs  builder_logs_ingestion_test.rs  builder_logs_real_test.rs  compile_pipeline_test.rs  contract_determinism_test.rs  deposits_endpoint_test.rs  e2e_attribution_test.rs  e2e_matching_test.rs  integration_test.rs  leaderboard_endpoint_test.rs  pnl_endpoint_test.rs  position_tracker_engine_test.rs  positions_history_endpoint_test.rs  trades_endpoint_test.rs
tests/fixtures/: deposits_response.json  leaderboard_response.json  pnl_response.json  positions_history_response.json  trades_response.json
validation/: expected.json
