[package]
name = "hypesilico"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-float"] }
thiserror = "1"
anyhow = "1"
tower = "0.5"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
backoff = { version = "0.4", features = ["tokio"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
csv = "1"
lz4_flex = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
